test/spec_vectors/return_call_indirect/fail/module_28.wat
(module (table 0 funcref) (func $large-type (return_call_indirect (type 1012321300) (i32.const 0))))